Added escalation and notify logic